fixed layout issues with all pages and improved usability.

--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -111,7 +111,7 @@ input:-webkit-autofill {
 #challengeText {
     font-family: 'Permanent Marker', cursive;
     color: black;
-    font-size: 3em;
+    font-size: 2.6em;
     text-align: center;
 }
 
